--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "cross-env NODE_ENV=production node index",
+    "dev": "cross-env NODE_ENV=development nodemon --inspect",
+    "lint": "cross-env NODE_ENV=development eslint ./**/*.js",
+    "test": "cross-env NODE_ENV=test echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
     "tasks",
@@ -15,6 +18,8 @@
   "license": "ISC",
   "dependencies": {},
   "devDependencies": {
+    "cross-env": "^5.2.0",
+    "dotenv": "^8.0.0",
     "express": "^4.17.1"
   }
 }
