--- a/package.json
+++ b/package.json
@@ -16,10 +16,16 @@
   ],
   "author": "Daniel Perez",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "express-request-id": "^1.4.1",
+    "morgan": "^1.9.1",
+    "strip-final-newline": "^2.0.0",
+    "winston": "^3.2.1"
+  },
   "devDependencies": {
     "cross-env": "^5.2.0",
     "dotenv": "^8.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "nodemon": "^1.19.1"
   }
 }
