--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "license": "ISC",
   "dependencies": {
     "express-request-id": "^1.4.1",
+    "http-status-codes": "^1.3.2",
+    "mongoose": "^5.6.8",
     "morgan": "^1.9.1",
     "strip-final-newline": "^2.0.0",
     "winston": "^3.2.1"
