Inicio de Autenticacion y agregado de password

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Daniel Perez",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express-request-id": "^1.4.1",
     "http-status-codes": "^1.3.2",
     "mongoose": "^5.6.8",
