--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "express-request-id": "^1.4.1",
     "http-status-codes": "^1.3.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.8",
     "morgan": "^1.9.1",
     "strip-final-newline": "^2.0.0",
