--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "express-request-id": "^1.4.1",
     "http-status-codes": "^1.3.2",
     "jsonwebtoken": "^8.5.1",
