--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^5.6.8",
     "morgan": "^1.9.1",
     "strip-final-newline": "^2.0.0",
+    "validator": "^11.1.0",
     "winston": "^3.2.1"
   },
   "devDependencies": {
