--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express-request-id": "^1.4.1",
+    "express-validator": "^6.1.1",
     "http-status-codes": "^1.3.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.8",
